feat: translates added / refactor
