# internal/entity/translates.go
@@ -1,0 +1,10 @@
+package entity
+
+import "github.com/google/uuid"
+
+type Translate struct {
+	ID  uuid.UUID `gorm:"default:uuid_generate_v4()"`
+	RU  string
+	KZ  string
+	ENG string
+}
